// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Custom Button Component Variants Clear matches the snapshot 1`] = `
<button
  className="ant-btn custom-btn custom-btn-clear"
  onClick={[Function]}
  type="button"
>
  <span>
    Test
  </span>
</button>
`;

exports[`Custom Button Component Variants Default matches the snapshot 1`] = `
<button
  className="ant-btn custom-btn custom-btn-default"
  onClick={[Function]}
  type="button"
>
  <span>
    Test
  </span>
</button>
`;

exports[`Custom Button Component Variants Delete matches the snapshot 1`] = `
<button
  className="ant-btn custom-btn custom-btn-delete"
  onClick={[Function]}
  type="button"
>
  <span>
    Test
  </span>
</button>
`;

exports[`Custom Button Component Variants Icon Border matches the snapshot 1`] = `
<button
  className="ant-btn custom-btn custom-btn-icon-border"
  onClick={[Function]}
  type="button"
>
  <span
    aria-label="menu"
    className="anticon anticon-menu"
    role="img"
  >
    <svg
      aria-hidden="true"
      data-icon="menu"
      fill="currentColor"
      focusable="false"
      height="1em"
      viewBox="64 64 896 896"
      width="1em"
    >
      <path
        d="M904 160H120c-4.4 0-8 3.6-8 8v64c0 4.4 3.6 8 8 8h784c4.4 0 8-3.6 8-8v-64c0-4.4-3.6-8-8-8zm0 624H120c-4.4 0-8 3.6-8 8v64c0 4.4 3.6 8 8 8h784c4.4 0 8-3.6 8-8v-64c0-4.4-3.6-8-8-8zm0-312H120c-4.4 0-8 3.6-8 8v64c0 4.4 3.6 8 8 8h784c4.4 0 8-3.6 8-8v-64c0-4.4-3.6-8-8-8z"
      />
    </svg>
  </span>
</button>
`;

exports[`Custom Button Component Variants Icon matches the snapshot 1`] = `
<button
  className="ant-btn custom-btn custom-btn-icon"
  onClick={[Function]}
  type="button"
>
  <span
    aria-label="menu"
    className="anticon anticon-menu"
    role="img"
  >
    <svg
      aria-hidden="true"
      data-icon="menu"
      fill="currentColor"
      focusable="false"
      height="1em"
      viewBox="64 64 896 896"
      width="1em"
    >
      <path
        d="M904 160H120c-4.4 0-8 3.6-8 8v64c0 4.4 3.6 8 8 8h784c4.4 0 8-3.6 8-8v-64c0-4.4-3.6-8-8-8zm0 624H120c-4.4 0-8 3.6-8 8v64c0 4.4 3.6 8 8 8h784c4.4 0 8-3.6 8-8v-64c0-4.4-3.6-8-8-8zm0-312H120c-4.4 0-8 3.6-8 8v64c0 4.4 3.6 8 8 8h784c4.4 0 8-3.6 8-8v-64c0-4.4-3.6-8-8-8z"
      />
    </svg>
  </span>
</button>
`;

exports[`Custom Button Component Variants Minimal matches the snapshot 1`] = `
<button
  className="ant-btn custom-btn custom-btn-minimal"
  onClick={[Function]}
  type="button"
>
  <span>
    Test
  </span>
</button>
`;

exports[`Custom Button Component Variants Primary matches the snapshot 1`] = `
<button
  className="ant-btn custom-btn custom-btn-primary"
  onClick={[Function]}
  type="button"
>
  <span>
    Test
  </span>
</button>
`;
